apps/web/app/global.css
a:not(.title) {
  font-weight: 700;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #207DE9;
  text-decoration-thickness: 1px;
  text-decoration-skip-ink: none;
  text-underline-offset: 0.25em;
}

a:not(.title):hover {
  text-decoration-color: currentcolor;
  text-decoration-thickness: 2px;
  color: #207DE9;
}

a.title:hover {
  text-decoration-color: currentcolor;
  text-decoration-thickness: 2px;
  color: #207DE9;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.safe-area-padding {
  padding-bottom: constant(safe-area-inset-bottom, 20px); /* Older iOS versions */
  padding-bottom: env(safe-area-inset-bottom, 20px); /* Modern browsers */
}

